--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --bail",
+    "lint": "standard --fix src/*.js test/*.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/plepe/find-wikidata-items/issues"
   },
-  "homepage": "https://github.com/plepe/find-wikidata-items#readme"
+  "homepage": "https://github.com/plepe/find-wikidata-items#readme",
+  "devDependencies": {
+    "mocha": "^9.1.3",
+    "standard": "^16.0.4"
+  }
 }
