--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mocha": "^9.1.3",
     "node-fetch": "^2.6.6",
     "standard": "^16.0.4"
+  },
+  "dependencies": {
+    "haversine": "^1.1.1"
   }
 }
